corrected the siye of the font on smaller screens

--- a/style.css
+++ b/style.css
@@ -100,7 +100,6 @@ font-family: Poppins;
 font-weight: 400;
 font-style: Regular;
 font-size: 13px;
-
 }
 /*footer*/
 footer {
@@ -159,8 +158,21 @@ margin: 50px;}
 .ection-1-img {
  width: 100%;
  height:200px;
- 
  }
+
+main h3 {
+font-size: 14px;
+ }
+
+main h2 {
+font-size: 20px;
+ }
+main p {
+font-size: 12px;
+}
+
+
+
 
 .footer-main-row {
   display: grid;
